kustomize/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: containers-for-anxious-people
  labels:
    app: containers-for-anxious-people
spec:
  replicas: 1
  selector:
    matchLabels:
      app: containers-for-anxious-people
  template:
    metadata:
      labels:
        app: containers-for-anxious-people
    spec:
      containers:
      - name: containers-for-anxious-people
        image: fabioluciano/containers-for-anxious-people:1.0.3
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "10Mi"
            cpu: "2m"
          limits:
            memory: "50Mi"
            cpu: "5m"
